Updated rhino, separated ArchitecturyIntegration